--- a/Arcanoid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Arcanoid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -826,6 +826,22 @@ KillZVolume.Cooking=True
 KillZVolume.BrushSettings=True
 KillZVolume.Replication=True
 KillZVolume.Actor=True
+BP_control_C.Default=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+K2Node_VariableGet.Events=True
+PropertyWrapper.Events=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -842,8 +858,8 @@ PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [ContentBrowserRecent]
 MRUItem0=/Game/TopDownBP/BP_control
-MRUItem1=/Game/TopDownBP/BP_ball
-MRUItem2=/Game/TopDownBP/BP_blocks
+MRUItem1=/Game/TopDownBP/BP_blocks
+MRUItem2=/Game/TopDownBP/BP_ball
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.KillZVolume;/Engine/Transient.ActorFactoryBoxVolume_11
@@ -896,7 +912,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=334.400
-WindowSize=X=1283.200 Y=723.200
+WindowSize=X=1284.800 Y=724.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1887,12 +1903,13 @@ TcpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.
 TemplateSequenceEditorSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MoveForward,
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MoveForward,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MoveForward,
-StaticMeshComponent=StaticMeshComponent.Collision.Collision,
+StaticMeshComponent=
 StaticMeshActor=StaticMeshActor.Collision.Collision,
-BP_control_C=StaticMeshComponent.Collision.Collision,
+BP_control_C=
 PropertyWrapper=StaticMeshComponent.Collision.Collision,
-K2Node_VariableGet=StaticMeshComponent.Collision.Collision,
+K2Node_VariableGet=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,
 K2Node_VariableSet=StaticMeshComponent.Collision.Collision,
+BP_ball_C=StaticMeshActor.Collision.Collision,
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
