--- a/Arcanoid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Arcanoid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -161,7 +161,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 PostProcessVolume.TransformCommon=True
@@ -842,6 +842,17 @@ CapsuleComponent.Cooking=True
 CapsuleComponent.Events=True
 K2Node_VariableGet.Events=True
 PropertyWrapper.Events=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+K2Node_CustomEvent.GraphNodeDetail=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+K2Node_VariableSet.Events=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -852,14 +863,14 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-InputSettings="\"Object.Bindings.AxisMappings.AxisMappings[14]\" "
+InputSettings=
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/BP_control
-MRUItem1=/Game/TopDownBP/BP_blocks
-MRUItem2=/Game/TopDownBP/BP_ball
+MRUItem0=/Game/TopDownBP/BP_ball
+MRUItem1=/Game/TopDownBP/BP_control
+MRUItem2=/Game/TopDownBP/BP_blocks
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.KillZVolume;/Engine/Transient.ActorFactoryBoxVolume_11
@@ -911,8 +922,8 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
-ScreenPosition=X=640.000 Y=334.400
-WindowSize=X=1284.800 Y=724.800
+ScreenPosition=X=436.000 Y=0.000
+WindowSize=X=1286.400 Y=726.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1905,11 +1916,12 @@ UdpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.
 WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MoveForward,
 StaticMeshComponent=
 StaticMeshActor=StaticMeshActor.Collision.Collision,
-BP_control_C=
+BP_control_C=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,
 PropertyWrapper=StaticMeshComponent.Collision.Collision,
 K2Node_VariableGet=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,
 K2Node_VariableSet=StaticMeshComponent.Collision.Collision,
 BP_ball_C=StaticMeshActor.Collision.Collision,
+MulticastInlineDelegatePropertyWrapper=StaticMeshActor.Collision.Collision,
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
