--- a/Arcanoid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Arcanoid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=0,Y=0)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -94,12 +94,16 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=2550,Y=1356)
 LastExecutedLaunchDevice=WindowsNoEditor@NB-K2108N002890
 LastExecutedLaunchName=NB-K2108N002890
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+NewWindowWidth=2550
+NewWindowHeight=1356
+LastExecutedPlayModeType=PlayMode_InEditorFloating
+MultipleInstancePositions=(X=0,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -156,6 +160,8 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
@@ -302,7 +308,7 @@ BP_blocks_C.Tick=True
 BP_blocks_C.Replication=True
 BP_blocks_C.Rendering=True
 BP_blocks_C.Collision=True
-BP_blocks_C.Actor=True
+BP_blocks_C.Actor=False
 BP_blocks_C.Input=True
 PropertyWrapper.Variable=True
 PropertyWrapper.DefaultValueCategory=True
@@ -853,6 +859,49 @@ K2Node_CallFunction.Graph=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
 K2Node_VariableSet.Events=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.Lightmass=True
+DirectionalLight.LightShafts=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.RayTracing=True
+DirectionalLight.AtmosphereAndCloud=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -868,9 +917,14 @@ KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/BP_ball
-MRUItem1=/Game/TopDownBP/BP_control
-MRUItem2=/Game/TopDownBP/BP_blocks
+MRUItem0=/Game/TopDownBP/BP_blocks
+MRUItem1=/Game/TopDownBP/BP_ball
+MRUItem2=/Engine/EditorMaterials/LevelGridMaterial
+MRUItem3=/Engine/EditorMaterials/GeometryCollection/InMaterial
+MRUItem4=/Engine/BasicShapes/Sphere
+MRUItem5=/Game/Geometry/Meshes/CubeMaterial
+MRUItem6=/Game/TopDownBP/BP_control
+MRUItem7=/Engine/BasicShapes/Cube
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.KillZVolume;/Engine/Transient.ActorFactoryBoxVolume_11
@@ -884,6 +938,11 @@ RecentlyPlaced=/Game/TopDownBP/BP_blocks.BP_blocks;
 /Game/TopDownBP/BP_blocks.BP_blocks=1
 /Game/TopDownBP/BP_ball.BP_ball=1
 /Game/TopDownBP/BP_control.BP_control=1
+/Engine/BasicShapes/Cube.Cube=1
+/Game/Geometry/Meshes/CubeMaterial.CubeMaterial=1
+/Engine/BasicShapes/Sphere.Sphere=1
+/Engine/EditorMaterials/GeometryCollection/InMaterial.InMaterial=1
+/Engine/EditorMaterials/LevelGridMaterial.LevelGridMaterial=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -923,7 +982,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=436.000 Y=0.000
-WindowSize=X=1286.400 Y=726.400
+WindowSize=X=1288.000 Y=728.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1834,6 +1893,10 @@ MovieSceneCapture.TimeStamp=2022.05.11-18.10.45
 MovieSceneCapture.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2022.05.11-18.10.37
 ExternalImagePicker.LastCompileMethod=Unknown
+PortalProxies.TimeStamp=2022.05.11-18.10.49
+PortalProxies.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2022.05.11-18.10.57
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MoveForward,
@@ -1917,11 +1980,15 @@ WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.Axis
 StaticMeshComponent=
 StaticMeshActor=StaticMeshActor.Collision.Collision,
 BP_control_C=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,
-PropertyWrapper=StaticMeshComponent.Collision.Collision,
+PropertyWrapper=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,
 K2Node_VariableGet=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,
-K2Node_VariableSet=StaticMeshComponent.Collision.Collision,
-BP_ball_C=StaticMeshActor.Collision.Collision,
+K2Node_VariableSet=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,
+BP_ball_C=
 MulticastInlineDelegatePropertyWrapper=StaticMeshActor.Collision.Collision,
+SceneComponent=StaticMeshActor.Collision.Collision,
+BP_Sky_Sphere_C=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,
+BrushComponent=StaticMeshActor.Collision.Collision,
+BP_blocks_C=
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1936,7 +2003,70 @@ InputSettings=True
 [DetailCategoriesAdvanced]
 CameraActor.Actor=False
 StaticMeshComponent.Collision=True
+SceneComponent.Rendering=True
 
 [MessageLog]
 LastLogListing=PIE
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
 
