--- a/Arcanoid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Arcanoid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -94,7 +94,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=2550,Y=1356)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=WindowsNoEditor@NB-K2108N002890
 LastExecutedLaunchName=NB-K2108N002890
 LastExecutedPIEPreviewDevice=
@@ -102,7 +102,6 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=2550
 NewWindowHeight=1356
-LastExecutedPlayModeType=PlayMode_InEditorFloating
 MultipleInstancePositions=(X=0,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -138,7 +137,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.ThumbnailSizeScale=0.348958
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
@@ -167,7 +166,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 PostProcessVolume.TransformCommon=True
@@ -902,6 +901,80 @@ DirectionalLight.LightFunction=True
 DirectionalLight.Tags=True
 DirectionalLight.Cooking=True
 DirectionalLight.Actor=True
+BP_Block_C.Tick=True
+BP_Block_C.Replication=True
+BP_Block_C.Rendering=True
+BP_Block_C.Collision=True
+BP_Block_C.Actor=True
+BP_Block_C.Input=True
+ChildActorComponent.TransformCommon=True
+ChildActorComponent.ChildActorComponent=True
+ChildActorComponent.Rendering=True
+ChildActorComponent.Tags=True
+ChildActorComponent.ComponentReplication=True
+ChildActorComponent.Variable=True
+ChildActorComponent.Cooking=True
+SceneComponent.Physics=True
+SceneComponent.LOD=True
+SceneComponent.AssetUserData=True
+SceneComponent.Collision=True
+PointLight.TransformCommon=True
+PointLight.Light=True
+PointLight.Rendering=True
+PointLight.Lightmass=True
+PointLight.Performance=True
+PointLight.LightFunction=True
+PointLight.Light Profiles=True
+PointLight.DistanceFieldShadows=True
+PointLight.RayTracing=True
+PointLight.Tags=True
+PointLight.Cooking=True
+PointLight.Actor=True
+REINST_BP_Block_C_177.TransformCommon=True
+REINST_BP_Block_C_177.Default=True
+REINST_BP_Block_C_177.Rendering=True
+REINST_BP_Block_C_177.Replication=True
+REINST_BP_Block_C_177.Collision=True
+REINST_BP_Block_C_177.Input=True
+REINST_BP_Block_C_177.Actor=True
+WorldSettings.Tick=True
+WorldSettings.LODSystem=True
+WorldSettings.Audio=True
+WorldSettings.Rendering=True
+WorldSettings.VR=True
+WorldSettings.Broadphase=True
+WorldSettings.Physics=True
+WorldSettings.World=True
+WorldSettings.Lightmass=True
+WorldSettings.GameMode=True
+WorldSettings.PrecomputedVisibility=True
+SpotLight.TransformCommon=True
+SpotLight.Light=True
+SpotLight.Rendering=True
+SpotLight.Lightmass=True
+SpotLight.Performance=True
+SpotLight.LightFunction=True
+SpotLight.Light Profiles=True
+SpotLight.DistanceFieldShadows=True
+SpotLight.RayTracing=True
+SpotLight.Tags=True
+SpotLight.Cooking=True
+SpotLight.Actor=True
+BP_ball_bonus_C.Tick=True
+BP_ball_bonus_C.Default=True
+BP_ball_bonus_C.Replication=True
+BP_ball_bonus_C.Rendering=True
+BP_ball_bonus_C.Collision=True
+BP_ball_bonus_C.Actor=True
+BP_ball_bonus_C.Input=True
+BP_Block_C.Default=True
+BP_bonus_C.Tick=True
+BP_bonus_C.Replication=True
+BP_bonus_C.Rendering=True
+BP_bonus_C.Collision=True
+BP_bonus_C.Actor=True
+BP_bonus_C.Input=True
+BP_Bonus_C.Default=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -915,18 +988,28 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 InputSettings=
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+StaticMeshComponent=
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/BP_blocks
-MRUItem1=/Game/TopDownBP/BP_ball
-MRUItem2=/Engine/EditorMaterials/LevelGridMaterial
-MRUItem3=/Engine/EditorMaterials/GeometryCollection/InMaterial
-MRUItem4=/Engine/BasicShapes/Sphere
-MRUItem5=/Game/Geometry/Meshes/CubeMaterial
-MRUItem6=/Game/TopDownBP/BP_control
-MRUItem7=/Engine/BasicShapes/Cube
+MRUItem0=/Game/TopDownBP/BP_Block
+MRUItem1=/Game/TopDownBP/BP_control
+MRUItem2=/Game/TopDownBP/BP_bonus
+MRUItem3=/Game/TopDownBP/BP_ball
+MRUItem4=/Game/TopDownBP/BP_ball_bonus
+MRUItem5=/Game/TopDownBP/BP_blocks
+MRUItem6=/Engine/EditorMaterials/LevelGridMaterial
+MRUItem7=/Engine/EditorMaterials/GeometryCollection/InMaterial
+MRUItem8=/Engine/BasicShapes/Sphere
+MRUItem9=/Game/Geometry/Meshes/CubeMaterial
+MRUItem10=/Engine/BasicShapes/Cube
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.KillZVolume;/Engine/Transient.ActorFactoryBoxVolume_11
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
 RecentlyPlaced=/Game/TopDownBP/BP_control.BP_control;
@@ -943,6 +1026,9 @@ RecentlyPlaced=/Game/TopDownBP/BP_blocks.BP_blocks;
 /Engine/BasicShapes/Sphere.Sphere=1
 /Engine/EditorMaterials/GeometryCollection/InMaterial.InMaterial=1
 /Engine/EditorMaterials/LevelGridMaterial.LevelGridMaterial=1
+/Game/TopDownBP/BP_Block.BP_Block=1
+/Game/TopDownBP/BP_ball_bonus.BP_ball_bonus=1
+/Game/TopDownBP/BP_Bonus.BP_Bonus=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -982,7 +1068,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=436.000 Y=0.000
-WindowSize=X=1288.000 Y=728.000
+WindowSize=X=1289.600 Y=729.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1985,10 +2071,15 @@ K2Node_VariableGet=StaticMeshComponent.Collision.Collision,StaticMeshActor.Colli
 K2Node_VariableSet=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,
 BP_ball_C=
 MulticastInlineDelegatePropertyWrapper=StaticMeshActor.Collision.Collision,
-SceneComponent=StaticMeshActor.Collision.Collision,
+SceneComponent=
 BP_Sky_Sphere_C=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,
-BrushComponent=StaticMeshActor.Collision.Collision,
-BP_blocks_C=
+BrushComponent=
+BP_blocks_C=StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,
+BP_Block_C=
+CameraActor=StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,
+REINST_BP_Block_C_177=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,
+KillZVolume=StaticMeshActor.Collision.Collision,
+BP_bonus_C=
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -2006,7 +2097,7 @@ StaticMeshComponent.Collision=True
 SceneComponent.Rendering=True
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=SourceControl
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
