--- a/Arcanoid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Arcanoid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -166,7 +166,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 PostProcessVolume.TransformCommon=True
@@ -975,6 +975,59 @@ BP_bonus_C.Collision=True
 BP_bonus_C.Actor=True
 BP_bonus_C.Input=True
 BP_Bonus_C.Default=True
+BP_bonus1_C.Tick=True
+BP_bonus1_C.Default=True
+BP_bonus1_C.Replication=True
+BP_bonus1_C.Rendering=True
+BP_bonus1_C.Collision=True
+BP_bonus1_C.Actor=True
+BP_bonus1_C.Input=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+BP_bonusSpeed_C.Tick=True
+BP_bonusSpeed_C.Replication=True
+BP_bonusSpeed_C.Rendering=True
+BP_bonusSpeed_C.Collision=True
+BP_bonusSpeed_C.Actor=True
+BP_bonusSpeed_C.Input=True
+BP_bonusSpeedMore_C.Tick=True
+BP_bonusSpeedMore_C.Replication=True
+BP_bonusSpeedMore_C.Rendering=True
+BP_bonusSpeedMore_C.Collision=True
+BP_bonusSpeedMore_C.Actor=True
+BP_bonusSpeedMore_C.Input=True
+BP_bonusSpeedLess_C.Tick=True
+BP_bonusSpeedLess_C.Replication=True
+BP_bonusSpeedLess_C.Rendering=True
+BP_bonusSpeedLess_C.Collision=True
+BP_bonusSpeedLess_C.Actor=True
+BP_bonusSpeedLess_C.Input=True
+BP_bonusSpeedLess_C.Default=True
+PointLightComponent.Variable=True
+PointLightComponent.TransformCommon=True
+PointLightComponent.Sockets=True
+PointLightComponent.Light=True
+PointLightComponent.Rendering=True
+PointLightComponent.Lightmass=True
+PointLightComponent.Performance=True
+PointLightComponent.ComponentTick=True
+PointLightComponent.LightFunction=True
+PointLightComponent.DistanceFieldShadows=True
+PointLightComponent.RayTracing=True
+PointLightComponent.Light Profiles=True
+PointLightComponent.Tags=True
+PointLightComponent.ComponentReplication=True
+PointLightComponent.Cooking=True
+PointLightComponent.Events=True
+BP_bonusSpeedMore_C.Default=True
+BP_Block_C.TransformCommon=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -995,17 +1048,22 @@ SceneComponent=
 ActorComponent=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/BP_Block
-MRUItem1=/Game/TopDownBP/BP_control
-MRUItem2=/Game/TopDownBP/BP_bonus
-MRUItem3=/Game/TopDownBP/BP_ball
-MRUItem4=/Game/TopDownBP/BP_ball_bonus
-MRUItem5=/Game/TopDownBP/BP_blocks
-MRUItem6=/Engine/EditorMaterials/LevelGridMaterial
-MRUItem7=/Engine/EditorMaterials/GeometryCollection/InMaterial
-MRUItem8=/Engine/BasicShapes/Sphere
-MRUItem9=/Game/Geometry/Meshes/CubeMaterial
-MRUItem10=/Engine/BasicShapes/Cube
+MRUItem0=/Game/TopDownBP/BP_control
+MRUItem1=/Game/TopDownBP/BP_ball
+MRUItem2=/Game/TopDownBP/BP_Block
+MRUItem3=/Game/TopDownBP/BP_blocks
+MRUItem4=/Game/TopDownBP/BP_bonusSpeedMore
+MRUItem5=/DatasmithContent/Materials/CE_OpaqueMaster
+MRUItem6=/Game/TopDownBP/BP_bonusSpeedLess
+MRUItem7=/Game/TopDownBP/BP_bonus
+MRUItem8=/Game/TopDownBP/BP_bonusSpeed
+MRUItem9=/Game/TopDownBP/BP_bonus1
+MRUItem10=/Engine/EditorMaterials/LevelGridMaterial
+MRUItem11=/Game/TopDownBP/BP_ball_bonus
+MRUItem12=/Engine/EditorMaterials/GeometryCollection/InMaterial
+MRUItem13=/Engine/BasicShapes/Sphere
+MRUItem14=/Game/Geometry/Meshes/CubeMaterial
+MRUItem15=/Engine/BasicShapes/Cube
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
@@ -1029,6 +1087,10 @@ RecentlyPlaced=/Game/TopDownBP/BP_blocks.BP_blocks;
 /Game/TopDownBP/BP_Block.BP_Block=1
 /Game/TopDownBP/BP_ball_bonus.BP_ball_bonus=1
 /Game/TopDownBP/BP_Bonus.BP_Bonus=1
+/Game/TopDownBP/BP_bonus1.BP_bonus1=1
+/Game/TopDownBP/BP_bonusSpeedMore.BP_bonusSpeedMore=1
+/Game/TopDownBP/BP_bonusSpeedLess.BP_bonusSpeedLess=1
+/DatasmithContent/Materials/CE_OpaqueMaster.CE_OpaqueMaster=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1068,7 +1130,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=436.000 Y=0.000
-WindowSize=X=1289.600 Y=729.600
+WindowSize=X=1299.200 Y=739.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1983,6 +2045,8 @@ PortalProxies.TimeStamp=2022.05.11-18.10.49
 PortalProxies.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2022.05.11-18.10.57
 StaticMeshEditor.LastCompileMethod=Unknown
+LauncherServices.TimeStamp=2022.05.11-18.10.42
+LauncherServices.LastCompileMethod=Unknown
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MoveForward,
@@ -2065,21 +2129,24 @@ UdpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.
 WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MoveForward,
 StaticMeshComponent=
 StaticMeshActor=StaticMeshActor.Collision.Collision,
-BP_control_C=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,
+BP_control_C=
 PropertyWrapper=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,
 K2Node_VariableGet=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,
 K2Node_VariableSet=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,
 BP_ball_C=
 MulticastInlineDelegatePropertyWrapper=StaticMeshActor.Collision.Collision,
-SceneComponent=
+SceneComponent=StaticMeshComponent.Collision.Collision,
 BP_Sky_Sphere_C=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,
 BrushComponent=
 BP_blocks_C=StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,
-BP_Block_C=
+BP_Block_C=StaticMeshComponent.Collision.Collision,
 CameraActor=StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,
 REINST_BP_Block_C_177=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,
 KillZVolume=StaticMeshActor.Collision.Collision,
 BP_bonus_C=
+BP_bonus1_C=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,
+BP_bonusSpeedMore_C=
+BP_bonusSpeedLess_C=
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -2095,9 +2162,10 @@ InputSettings=True
 CameraActor.Actor=False
 StaticMeshComponent.Collision=True
 SceneComponent.Rendering=True
+BP_bonus_C.Collision=True
 
 [MessageLog]
-LastLogListing=SourceControl
+LastLogListing=PIE
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
